# thera

./: .gitignore  .prettierrc  CLAUDE.md  README.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
bench/: gc_stress.hawk  gc_stress.thera  mandelbrot.hawk
bootstrap/: README.md  frontend.hawkbc  frontend.thera-bc
docs/: architecture.md  audit_2026_07.md  bytecode.md  completeness.md  conformance.md  ergonomics.md  fmt_v2.md  frontend.md  frontend_in_hawk.md  grammar.md  guidelines.md  http-tls.md  interfaces.md  language.md  lsp_v2.md  module_init.md  notes.md  overview.md  parser-recovery.md  phases.md  plan.md  proposal.md  rename.md  roadmap.md  scoping.md  selfhosting.md  stdlib.md  tailexpr.md  testability.md  toc.md  visibility.md
examples/: closures.hawk  enums.aero  enums.hawk  feature_tour.hawk  feature_tour.thera  fibers.hawk  fibers.thera  gc_stress.hawk  git_branch.aero  git_branch.hawk  hello.aero  hello.hawk  json.hawk  json.thera  list_hof.hawk  list_hof.thera  mandelbrot.hawk  maps.hawk  maps.thera  structs.aero  structs.hawk  structs.thera  wordcount.aero  wordcount.hawk  wordcount.thera  wordcount_test.aero  wordcount_test.hawk
pkgs/calc/: eval.hawk  eval_test.hawk  lexer.hawk  lexer_test.hawk  main.hawk  parser.hawk  parser_test.hawk
pkgs/cli/: diagnostic.hawk  diagnostic.thera  driver.hawk  driver.thera  driver_test.hawk  driver_test.thera  fmt.hawk  fmt.thera  fmt_test.hawk  fmt_test.thera  loader.hawk  loader.thera  loader_test.hawk  loader_test.thera  main.hawk  main.thera  runner.hawk  runner.thera  session.hawk  session.thera  session_test.hawk  session_test.thera  testkit.thera
pkgs/cli/ast/: ast.hawk  ast.thera  ast_test.hawk  describe.hawk  describe.thera  dump.thera
pkgs/cli/bytecode/: encoder.hawk  encoder.thera  encoder_test.hawk  encoder_test.thera  instr.hawk  instr.thera  module.hawk  module.thera
pkgs/cli/checker/: checker.hawk  checker.thera  checker_test.hawk  checker_test.thera
pkgs/cli/codegen/: codegen.hawk  codegen.thera  codegen_test.hawk  codegen_test.thera  module_scope.hawk  module_scope.thera
pkgs/cli/edit/: edit.hawk  edit.thera  edit_test.hawk
pkgs/cli/element/: element.hawk  element.thera  element_test.hawk  floor_test.thera  inference.hawk  inference.thera  inference_test.hawk  resolver.hawk  resolver.thera  resolver_test.hawk  resolver_test.thera  scope.hawk  scope_test.hawk  scope_test.thera  types.hawk  types.thera
pkgs/cli/fix/: fix.hawk  fix.thera  fix_test.hawk
pkgs/cli/lexer/: lexer.hawk  lexer.thera  lexer_test.hawk  lexer_test.thera  token.hawk  token.thera
pkgs/cli/lint/: lint.hawk  lint.thera  lint_test.hawk  lint_test.thera
pkgs/cli/lsp/: analysis.hawk  analysis.thera  analysis_test.hawk  analysis_test.thera  code_action.hawk  code_action.thera  completion.thera  completion_test.thera  definition.hawk  definition.thera  diagnostics.hawk  diagnostics.thera  fixtures.thera  fixtures_test.thera  formatting.hawk  glob.hawk  glob.thera  glob_test.hawk  glob_test.thera  hover.hawk  hover.thera  hover_test.hawk  hover_test.thera  jsonrpc.hawk  jsonrpc.thera  jsonrpc_test.hawk  jsonrpc_test.thera  outbox.hawk  paths.hawk  paths_test.hawk  paths_test.thera  positions.hawk  positions.thera  positions_test.hawk  positions_test.thera  references.hawk  references.thera  rename.hawk  rename.thera  resolve.hawk  (+20 more)
pkgs/cli/parser/: parser.hawk  parser.thera  parser_test.hawk  (+1 more)
runtime/: Cargo.toml  build.rs  deny.toml
runtime/src/: builder.rs  codec.rs  disasm.rs  heap.rs  instr.rs  interp.rs  lib.rs  main.rs  map.rs  module.rs  profile.rs  serialize.rs  value.rs
runtime/src/interp/: mod.rs  natives.rs
runtime/tests/: tls.rs
sdk/std/: args.hawk  char.hawk  core.hawk  list.hawk  path.hawk  regex.hawk  string.hawk  testing.hawk
src/std/: args.aero  char.aero  core.aero  fs.aero  path.aero  testing.aero
tests/: integration_runner.thera  lang_runner.hawk  lang_runner.thera
tests/lang/: README.md
tool/: pubspec.yaml
tool/.dart_tool/: package_config.json  package_graph.json
tool/scratch/: debug_parser.dart
tool/test/: builtins_test.dart  bytecode_test.dart  checker_test.dart  codegen_test.dart  element_test.dart  emit_cli_test.dart  grammar_doc_test.dart  inference_test.dart  lexer_parity_test.dart  loader_test.dart  lsp_server_test.dart  namespace_test.dart  parser_test.dart  runtime_harness.dart  stdlib_e2e_test.dart
(+427 files in other folders)
