[package]
name = "thera"
version = "0.1.0"
edition = "2024"

# The library crate is `thera`; the binary
# is `thera-rt` — the *bare runtime*. The full SDK launcher (this binary with the
# front-end bytecode embedded) is named `thera` by the SDK build.
[[bin]]
name = "thera-rt"
path = "src/main.rs"

[features]
# Per-native call counting, dumped to stderr at end of run when THERA_NATIVE_STATS
# is set. A tuning aid; off by default so the interpreter pays nothing.
native-stats = []

[dependencies]
# std.hash digests — best-of-breed, battle-tested implementations (the runtime's
# first external dependencies, added deliberately; see docs/stdlib.md §std.hash).
sha2 = "0.10"       # SHA-256 (RustCrypto)
sha1 = "0.10"       # SHA-1 (RustCrypto)
md-5 = "0.10"       # MD5 (RustCrypto)
crc32fast = "1.4"   # CRC-32 (IEEE 802.3)
# std.regex — RE2-derived, linear-time engine, the Rust team's reference crate
# (the runtime's 2nd deliberate dependency; see docs/stdlib.md §std.regex).
regex = "1"
# std.term — terminal dimensions across unix + windows (the runtime's 3rd
# deliberate dependency; see docs/stdlib.md §std.term). `is_tty` is std alone.
terminal_size = "0.4"
# std.net — the readiness poller (kqueue/epoll/IOCP) the socket natives park on;
# the scheduler's phase-4 event loop (the runtime's 4th deliberate dependency;
# see docs/stdlib.md §std.http and docs/roadmap.md §Concurrency). Hand-rolling it
# needs `libc` for the syscalls either way, so mio costs one extra crate (`log`)
# over two hand-written unsafe backends — and covers windows, which they wouldn't.
mio = { version = "1", features = ["net", "os-poll"] }

[profile.dev]
# This makes the debug interpreter loop closer to the performance of the release
# interpreter (4x slower instead of 15x).
opt-level = 1 # Basic optimizations.

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# Release performance with line tables, so a sampling profiler can map the
# inlined `run_loop` back to source lines. Build with `--profile profiling`.
[profile.profiling]
inherits = "release"
debug = "line-tables-only"
